@@ -11,6 +11,7 @@
  * Restore resumable hints delivery, backport CASSANDRA-11960 (CASSANDRA-14419)
  * Create MessagingService mocking classes (CASSANDRA-12016)
 Merged from 2.2:
+ * MigrationManager attempts to pull schema from different major version nodes (CASSANDRA-14928)
  * Fix incorrect cqlsh results when selecting same columns multiple times (CASSANDRA-13262)
  * Returns null instead of NaN or Infinity in JSON strings (CASSANDRA-14377)
  * Don't skip entire sstables when reading backwards with mixed clustering column order (CASSANDRA-14910)
